JumpScript/tests/baselines/reference/constructorParametersInVariableDeclarations.errors.txt
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(2,17): error TS2304: Cannot find name 'x'.
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(3,22): error TS2304: Cannot find name 'x'.
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(4,23): error TS2304: Cannot find name 'x'.
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(10,17): error TS2304: Cannot find name 'x'.
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(11,22): error TS2304: Cannot find name 'x'.
tests/cases/compiler/constructorParametersInVariableDeclarations.jump(12,23): error TS2304: Cannot find name 'x'.


==== tests/cases/compiler/constructorParametersInVariableDeclarations.jump (6 errors) ====
    class A {
        private a = x;
                    ~
!!! error TS2304: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! error TS2304: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! error TS2304: Cannot find name 'x'.
        constructor(x: number) {
        }
    }
    
    class B {
        private a = x;
                    ~
!!! error TS2304: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! error TS2304: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! error TS2304: Cannot find name 'x'.
        constructor() {
            var x = 1;
        }
    }